# Machine_Epsilon

./: CMakeLists.txt  README.md  main.cpp
includes/: dword.cpp  dword.hpp  funcs.hpp
